--- a/apps/ethic_share_web/assets/src/index.css
+++ b/apps/ethic_share_web/assets/src/index.css
@@ -14,6 +14,10 @@
   padding: 20px;
 }
 
+.padded-alert { 
+  padding: 10px;
+}
+
 .form-control-container-lateral {
   padding-left: 15px;
   padding-right: 15px;
